# DJI-CLI

./: CMakeLists.txt  README.md  main.cpp
common/: common_types.cpp  common_types.h  common_utils.cpp  common_utils.h
config/: config.json  planData.json
tasks/: TasksManager.cpp  TasksManager.h  com_task.cpp  com_task.h
tasks/modules/: CLI2Frame.cpp  CLI2Frame.h  FrameAssembler.cpp  FrameAssembler.h  FrameDataHandler.cpp  FrameDataHandler.h  ReplyFrameDecoder.cpp  ReplyFrameDecoder.h  TelemetryUI.cpp  TelemetryUI.h  routeDataModule.cpp  routeDataModule.h
tasks/utils/: CLinuxTCPCom.cpp  GimbalJoystickController.cpp  GimbalJoystickController.h
